add-room-and-fix-facility
